--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "scripts": {
     "build": "yarn run lint && yarn run clean && rollup --config && yarn run emit-types && yarn run update-docs",
     "clean": "yarn run del dist",
-    "emit-types": "mkdir -p dist/types && yarn run tsc src/signature_pad.ts --lib DOM,ES2015 --declaration --declarationDir dist/types --emitDeclarationOnly",
-    "format": "prettier --write '{src,tests}/**/*.{js,ts}'",
-    "lint": "eslint '{src,tests}/**/*.ts'",
+    "emit-types": "mkdirp dist/types && yarn run tsc src/signature_pad.ts --lib DOM,ES2015 --declaration --declarationDir dist/types --emitDeclarationOnly",
+    "format": "prettier --write {src,tests}/**/*.{js,ts}",
+    "lint": "eslint {src,tests}/**/*.ts",
     "prepublishOnly": "yarn run build",
     "serve": "serve -l 9000 docs",
     "start": "yarn run build && yarn run serve",
